# zbar

./: .clang-format  .gitignore  .hgtags  .travis.yml  ChangeLog  HACKING.md  INSTALL  INSTALL.md  LICENSE.md  Makefile.am  NEWS  NEWS.md  README  README-windows.md  README.md  README.windows  TODO.md  configure.ac  zbar-gtk.pc.in  zbar-qt5.pc.in  zbar.nsi  zbar.spec.in
.github/workflows/: ci.yml  coverity.yml  create_binaries.yml  debuilder.sh  gen_release.pl  macos.yml  mingw-w64.yml  on_release.yml  on_tag.yml  ubuntu-gtk2.yml  ubuntu-gtk3.yml  ubuntu-pbuilder.yml  ubuntu.yml  update_release.yml
android/: AndroidManifest.xml  README  build-ndk.xml
android/examples/CameraTest/: AndroidManifest.xml
android/examples/CameraTest/res/layout/: main.xml
android/examples/CameraTest/src/net/sourceforge/zbar/android/CameraTest/: CameraPreview.java  CameraTestActivity.java
android/jni/: Android.mk  config.h
dbus/: org.linuxtv.Zbar.conf
debian/: TODO  changelog  clean  control  copyright  docs  gbp.conf  libbarcode-zbar-perl.install  libzbar-dev.install  libzbar0.install  libzbar0.symbols  libzbargtk-dev.install  libzbargtk0.install  libzbargtk0.symbols  libzbarqt-dev.install  libzbarqt0.install  libzbarqt0.shlibs  libzbarqt0.symbols  not-installed  python-zbar.install  python-zbarpygtk.install  python3-zbar.install  rules  watch  zbar-dbg.install  zbar-tools.install  zbarcam-gtk.install  zbarcam-qt.install
doc/: Makefile.am.inc  doxygen.conf.in
doc/ref/: commonoptions.xml  zbarcam.xml  zbarimg.xml
examples/: processor.c  processor.cpp  scan_image.c  scan_image.cpp  sha1sum  test_examples.sh  test_examples.sh.in  upcrpc.py
gtk/: Makefile.am  Makefile.am.inc  gtk-gir-dump.c  zbargtk.c  zbargtkprivate.h
include/: zbar.h
include/zbar/: Decoder.h  Exception.h  Image.h  ImageScanner.h  Processor.h  QZBar.h  QZBarImage.h  Scanner.h  Symbol.h  Video.h  Window.h  zbargtk.h
iphone/: ChangeLog  README  ZBarCVImage.h  ZBarHelpController.m  ZBarReaderViewController.m  debug.h
iphone/doc/: ZBarReaderViewController.rst  licensing.rst  optimizing.rst
iphone/examples/EmbedReader/EmbedReader/: EmbedReaderAppDelegate.h  EmbedReaderViewController.h
iphone/examples/ReaderSample/ReaderSample/: ReaderSampleAppDelegate.h  ReaderSampleViewController.h
iphone/examples/TabReader/TabReader/: ResultsViewController.h  TabReaderAppDelegate.h
iphone/include/: config.h
iphone/include/ZBarSDK/: ZBarCameraSimulator.h  ZBarCaptureReader.h  ZBarHelpController.h  ZBarImage.h  ZBarImageScanner.h  ZBarReaderController.h  ZBarReaderView.h  ZBarReaderViewController.h  ZBarSDK.h  ZBarSymbol.h
iphone/res/: zbar-help.html
iphone/zbar.xcodeproj/: project.pbxproj
java/: Makefile.am  zbarjni.c
perl/: Changes  MANIFEST  MANIFEST.SKIP  Makefile.PL  README  ZBar.pm  ZBar.xs  ppport.h
perl/ZBar/: Image.pod  ImageScanner.pod  Processor.pod  Symbol.pod
perl/examples/: paginate.pl
perl/inc/Devel/: CheckLib.pm
perl/t/: Image.t  Processor.t
plugin/: plugin.c
po/: LINGUAS  Makevars  POTFILES.in  pt_BR.po
pygtk/: Makefile.am.inc  zbargtkmodule.c  zbarpygtkmodule.c
python/: Makefile.am.inc  README  decoder.c  enum.c  exception.c  image.c  imagescanner.c  processor.c  scanner.c  setup.py  setup_plus.py  symbol.c  symboliter.c  symbolset.c  zbarmodule.c  zbarmodule.h
python/examples/: processor.py  read_one.py  scan_image.py
python/test/: test_zbar.py
python/zbar_init/: __init__.py
qt/: Makefile.am.inc  QZBar.cpp  QZBarThread.cpp  QZBarThread.h
test/: Makefile.am.inc  barcodetest.py  check_dbus.sh.in  dbg_scan.cpp  pdf417_encode.h  test_convert.c  test_cpp.cpp  test_cpp_img.cpp  test_dbus.c  test_decode.c  test_examples.sh.in  test_gi.py  test_images.c  test_images.h  test_jpeg.c  test_proc.c  test_pygtk.py  test_python.py  test_video.c  test_window.c
travis/: linux.debian-sid.install  linux.debian-sid.script  linux.mingw-w64.install  linux.mingw-w64.script  linux.ubuntu-gtk2.install  linux.ubuntu-gtk2.script  linux.ubuntu-gtk3.install  linux.xenial-gtk3.install  linux.xenial-gtk3.script  linux.xenial.install  linux.xenial.script  osx.mac.before_install  osx.mac.install  osx.mac.script  windows.pc.before_install  windows.pc.install  windows.pc.script
zbar/: Makefile.am  Makefile.am.inc  config.c  convert.c  debug.h  decoder.c  decoder.h  error.c  error.h  event.h  gettext.h  image.c  image.h  img_scanner.c  img_scanner.h  jpeg.c  libzbar.rc  misc.c  misc.h  mutex.h  processor.c  processor.h  qrcode.h  refcnt.c  refcnt.h  scanner.c  sqcode.c  sqcode.h  svg.c  svg.h  symbol.c  symbol.h  thread.h  timer.h  video.c  video.h  window.c  window.h
zbar/decoder/: codabar.c  codabar.h  code128.c  code128.h  code39.c  code39.h  code93.c  code93.h  databar.c  databar.h  ean.c  ean.h  i25.c  i25.h  pdf417.c  pdf417.h  pdf417_hash.h  qr_finder.c  qr_finder.h
zbar/processor/: lock.c  null.c  posix.c  posix.h  win.c  x.c
zbar/qrcode/: bch15_5.c  bch15_5.h  binarize.c  binarize.h  isaac.c  isaac.h  qrdec.c  qrdec.h  qrdectxt.c  rs.c  rs.h  util.c  util.h
zbar/video/: dshow.c  null.c  v4l.c  v4l1.c  v4l2.c  vfw.c
zbar/window/: dib.c  null.c  vfw.c  win.c  win.h  x.c  x.h  ximage.c  xv.c
zbar_lite/: README.md  preparation.sh  setup.py
zbar_lite/config_template/linux/: config.h
zbar_lite/config_template/windows/: config.h
zbarcam/: Makefile.am.inc  scan_video.c  zbarcam-gtk.c  zbarcam-qt.cpp  zbarcam.c  zbarcam.rc
zbarimg/: Makefile.am.inc  zbarimg.c  zbarimg.rc
